--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Navigation/MainPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Navigation/MainPage.xaml
@@ -9,7 +9,7 @@
   <MasterDetailPage.Detail>
     <NavigationPage>
       <x:Arguments>
-       <local:ContactsPage />
+       <local:HomePage />
       </x:Arguments>
     </NavigationPage>
   </MasterDetailPage.Detail>
