Added SQLite PCL
- Using default database
- Added packages for Android and IOS

--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPage.xaml
@@ -3,9 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Deakin_Helper.ClassesPage"
              Title="Classes">
-  <ContentPage.Content>
-    <StackLayout>
-      <Label Text="Class data goes here" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
-    </StackLayout>
-  </ContentPage.Content>
+  <ListView x:Name="listView" ItemSelected="listItemSelected">
+    <ListView.ItemTemplate>
+      <DataTemplate>
+        <ViewCell>
+          <ViewCell.View>
+            <StackLayout Padding="20,0,20,0"
+                         Orientation="Horizontal"
+                         HorizontalOptions="FillAndExpand">
+
+              <Label Text="{Binding Name}"
+                     VerticalTextAlignment="Center"
+                     HorizontalOptions="StartAndExpand" />
+              <Image Source="check.png"
+                     HorizontalOptions="End"
+                     IsVisible="{Binding Done}"/>
+
+            </StackLayout>
+          </ViewCell.View>
+        </ViewCell>
+      </DataTemplate>
+    </ListView.ItemTemplate>
+  </ListView>
 </ContentPage>
