--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/HomePage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/HomePage.xaml
@@ -2,10 +2,25 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Deakin_Helper.HomePage"
-             Title="Home Page">
+             Title="Home Page"
+             BackgroundColor="White">
   <ContentPage.Content>
     <StackLayout>
-      <Label Text="Home Page data goes here" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+      <Label Text="User" FontSize="25" TextColor="White" BackgroundColor="Gray"/>
+      <StackLayout Spacing="0" Orientation="Horizontal">
+        <Label x:Name="lblName" Text="User's Name" TextColor="Black"/>
+        <Label Text="" HorizontalOptions="CenterAndExpand"/>
+        <Label x:Name="lblID" Text="ID:0000000" TextColor="Black"/>
+      </StackLayout>
+      <Label x:Name="lblCourseName" Text="User's Course name" TextColor="Black"/>
+      <Label Text="Today's Classes" FontSize="25" TextColor="White" BackgroundColor="Gray"/>
+      <ListView x:Name="lvAllClasses" SeparatorVisibility="None">
+      </ListView>
+      <StackLayout Spacing="0" Orientation="Horizontal">
+        <Label x:Name="lblAllClass" Text="All Classes" TextColor="Black"/>
+        <Label Text="" HorizontalOptions="CenterAndExpand"/>
+        <Label x:Name="lblImage" Text="ArrowImageHere" TextColor="Black"/>
+      </StackLayout>
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
