Classes Database Updated

--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPage.xaml
@@ -20,8 +20,8 @@
                        HorizontalOptions="StartAndExpand" />
               <Label Text="{Binding Time}"
                       VerticalTextAlignment="Center"
-                     HorizontalTextAlignment="End"
-                      HorizontalOptions="StartAndExpand" />
+                     HorizontalTextAlignment="Start"
+                      HorizontalOptions="EndAndExpand" />
 
             </StackLayout>
           </ViewCell.View>
