--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/SettingPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/SettingPage.xaml
@@ -4,8 +4,24 @@
              x:Class="Deakin_Helper.SettingPage"
              Title="Settings">
   <ContentPage.Content>
-    <StackLayout>
-      <Label Text="Settings data goes here" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
+    <StackLayout VerticalOptions="StartAndExpand" Padding="20">
+
+      <Label Text="Full Name" />
+      <Entry x:Name="fullNameEntry" Placeholder="Full Name" Text="{Binding FullName}"/>
+
+      <Label Text="Email" />
+      <Entry x:Name="emailEntry" Placeholder="Email" Text="{Binding Email}"/>
+
+      <Label Text="Student ID" />
+      <Entry x:Name="studentIDEntry" Placeholder="Student ID" Text="{Binding StudentID}"/>
+
+      <Label Text="Course" />
+      <Entry x:Name="courseEntry" Placeholder="Course" Text="{Binding Course}"/>
+
+      <Button Text="Save" Clicked="saveClicked"/>
+
+      <Button Text="Cancel" Clicked="cancelClicked"/>
+
     </StackLayout>
   </ContentPage.Content>
 </ContentPage>
