--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/SettingPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/SettingPage.xaml
@@ -3,25 +3,34 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Deakin_Helper.SettingPage"
              Title="Settings">
-  <ContentPage.Content>
-    <StackLayout VerticalOptions="StartAndExpand" Padding="20">
+  <ListView x:Name="listView" ItemSelected="listItemSelected">
+    <ListView.ItemTemplate>
+      <DataTemplate>
+        <ViewCell>
+          <ViewCell.View>
+            <StackLayout Padding="20,0,20,0"
+                         Orientation="Horizontal"
+                         HorizontalOptions="FillAndExpand">
 
-      <Label Text="Full Name" />
-      <Entry x:Name="fullNameEntry" Placeholder="Full Name" Text="{Binding FullName}"/>
+              <Label Text="{Binding FullName}"
+                     VerticalTextAlignment="Center"
+                     HorizontalOptions="Fill" />
+              <Label Text="{Binding Email}"
+                       VerticalTextAlignment="Center"
+                       HorizontalOptions="StartAndExpand" />
+              <Label Text="{Binding StudentID}"
+                      VerticalTextAlignment="Center"
+                     HorizontalTextAlignment="Start"
+                      HorizontalOptions="EndAndExpand" />
+              <Label Text="{Binding Course}"
+        VerticalTextAlignment="Center"
+       HorizontalTextAlignment="Start"
+        HorizontalOptions="EndAndExpand" />
 
-      <Label Text="Email" />
-      <Entry x:Name="emailEntry" Placeholder="Email" Text="{Binding Email}"/>
-
-      <Label Text="Student ID" />
-      <Entry x:Name="studentIDEntry" Placeholder="Student ID" Text="{Binding StudentID}"/>
-
-      <Label Text="Course" />
-      <Entry x:Name="courseEntry" Placeholder="Course" Text="{Binding Course}"/>
-
-      <Button Text="Save" Clicked="saveClicked"/>
-
-      <Button Text="Cancel" Clicked="cancelClicked"/>
-
-    </StackLayout>
-  </ContentPage.Content>
+            </StackLayout>
+          </ViewCell.View>
+        </ViewCell>
+      </DataTemplate>
+    </ListView.ItemTemplate>
+  </ListView>
 </ContentPage>
