--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/AssignmentPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/AssignmentPage.xaml
@@ -3,9 +3,30 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Deakin_Helper.AssignmentPage"
              Title="Assigment">
-  <ContentPage.Content>
-    <StackLayout>
-      <Label Text="Assignment data goes here" HorizontalOptions="Center" VerticalOptions="CenterAndExpand" />
-    </StackLayout>
-  </ContentPage.Content>
+  <ListView x:Name="listView" ItemSelected="listItemSelected">
+    <ListView.ItemTemplate>
+      <DataTemplate>
+        <ViewCell>
+          <ViewCell.View>
+            <StackLayout Padding="20,0,20,0"
+                         Orientation="Horizontal"
+                         HorizontalOptions="FillAndExpand">
+
+              <Label Text="{Binding UnitCode}"
+                     VerticalTextAlignment="Center"
+                     HorizontalOptions="Fill" />
+              <Label Text="{Binding AssignmentName}"
+                       VerticalTextAlignment="Center"
+                       HorizontalOptions="StartAndExpand" />
+              <Label Text="{Binding Day}"
+                      VerticalTextAlignment="Center"
+                     HorizontalTextAlignment="Start"
+                      HorizontalOptions="EndAndExpand" />
+
+            </StackLayout>
+          </ViewCell.View>
+        </ViewCell>
+      </DataTemplate>
+    </ListView.ItemTemplate>
+  </ListView>
 </ContentPage>
