Working on a datepicker.

--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPage.xaml
@@ -18,7 +18,7 @@
               <Label Text="{Binding UnitName}"
                        VerticalTextAlignment="Center"
                        HorizontalOptions="StartAndExpand" />
-              <Label Text="{Binding Time}"
+              <Label Text="{Binding ClassDate}"
                       VerticalTextAlignment="Center"
                      HorizontalTextAlignment="Start"
                       HorizontalOptions="EndAndExpand" />
