--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPageX.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/ClassesPageX.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:sys="clr-namespace:System;assembly=mscorlib"
              x:Class="Deakin_Helper.ClassesPageX"
              Title="{Binding Name}">
   <StackLayout VerticalOptions="StartAndExpand" Padding="20">
@@ -14,15 +15,31 @@
     <Label Text="Room Number" />
     <Entry x:Name="roomNumberEntry" Placeholder="Room Number" Text="{Binding RoomNumber}"/>
     
-    <Label Text="Day" />
-    <Entry x:Name="dayEntry" Placeholder="Day" Text="{Binding Day}"/>
-    
-    <Label Text="Time" />
-    <Entry x:Name="timeEntry" Placeholder="Time" Text="{Binding Time}"/>
-    
     <Label Text="Class Type" />
     <Entry x:Name="classTypeEntry" Placeholder="Class Type" Text="{Binding ClassType}"/>
 
+    <Label Text="Time" />
+    <Entry x:Name="timeEntry" Placeholder="Time" Text="{Binding Time}"/>
+    
+    <Label Text="Date" />
+    <DatePicker x:Name="dateEntry" VerticalOptions="CenterAndExpand" Date="{Binding ClassDate}">
+      <DatePicker.Format>dd--MM--yyyy</DatePicker.Format>
+      <DatePicker.MinimumDate>
+        <sys:DateTime x:FactoryMethod="Parse">
+          <x:Arguments>
+            <x:String>Jan 1 2000</x:String>
+          </x:Arguments>
+        </sys:DateTime>
+      </DatePicker.MinimumDate>
+      <DatePicker.MaximumDate>
+        <sys:DateTime x:FactoryMethod="Parse">
+          <x:Arguments>
+            <x:String>Dec 31 2050</x:String>
+          </x:Arguments>
+        </sys:DateTime>
+      </DatePicker.MaximumDate>
+    </DatePicker>
+    
     <Button Text="Save" Clicked="saveClicked"/>
 
     <Button Text="Delete" Clicked="deleteClicked"/>
