Home page display due assignments and today's classes. Added Date and Time picker to class and assignment entries.

--- a/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/AssignmentPage.xaml
+++ b/Deakin Helper/Deakin Helper/Deakin_Helper/Activity/AssignmentPage.xaml
@@ -18,7 +18,7 @@
               <Label Text="{Binding AssignmentName}"
                        VerticalTextAlignment="Center"
                        HorizontalOptions="StartAndExpand" />
-              <Label Text="{Binding Day}"
+              <Label Text="{Binding DueDate}"
                       VerticalTextAlignment="Center"
                      HorizontalTextAlignment="Start"
                       HorizontalOptions="EndAndExpand" />
